update gradle wrapper, remove jacoco